--- a/Logic/Logic.tex
+++ b/Logic/Logic.tex
@@ -193,16 +193,195 @@ H^n_r:=\binom{n+r-1}{n-1}=\binom{n+r-1}{r}\text{ amount of solutions }
 \section{Exponential Generating Function}
 \begin{theorem}
 \textbf{($r$ Arrangement with and without Repetition of $n$ objects)}
-\begin{equation*}
-\text{ This means the numbers of ways of selecting $r$ object from distinct $n$ object and rearrange them  }
-\end{equation*}
+\begin{center}
+   \begin{minipage}{0.9\linewidth}  
+       \centering
+       This means the numbers of ways of selecting $r$ object from distinct $n$ object and rearrange them  
+   \end{minipage}
+\end{center}
 \end{theorem}
 \begin{theorem}
 \textbf{(Taylor Expansion)}
 \begin{equation*}
-e^nx=
+e^x=\sum_{n=0}^\infty \frac{x^n}{n!}
 \end{equation*}
 \end{theorem}
+\begin{theorem}
+\textbf{(The form of $r$-Term of Generating Function)}
+\begin{equation*}
+  (\sum_{e_1+e_2+e_3=r} \frac{r!}{e_1!e_2!e_3!}) \frac{x^r}{r!}
+\end{equation*}
+\end{theorem}
+\chapter{Recurrence Relation}
+\section{Solution of Homogeneous Relation}
+\begin{theorem}
+\textbf{(Solution of Second order Homogeneous Recurrence Relation)} Let $\alpha ,\beta $ be two constant. Suppose 
+\begin{equation*}
+a_n=\alpha a_{n-1}+\beta a_{n-2}
+\end{equation*}
+We have
+\begin{equation*}
+\exists A,B, a_n= A(\frac{\alpha +\sqrt{\alpha ^2+4\beta } }{2})^n+B(\frac{\alpha -\sqrt{\alpha ^2+4\beta } }{2})^n
+\end{equation*}
+\end{theorem}
+\begin{proof}
+Let $b_n$ and $c_n$ be sequence that satisfy the recurrence relation. We see 
+\begin{align}
+  (b+c)_n&=b_n+c_n\\
+  &=\alpha b_{n-1}+\beta b_{n-2} +\alpha  c_{n-1}+\beta c_{n-2}\\
+  &=\alpha (b+c)_{n-1}+\beta  (b+c)_{n-2}
+\end{align}
+and 
+\begin{align}
+\gamma b_n&=\gamma (b_{n-1}+b_{n-2})\\
+&=\gamma b_{n-1}+\gamma b_{n-2}
+\end{align}
+We see that the set of sequences satisfying the recurrence relation is a vector space.\\
+
+This vector space if of dimension $2$, as the sequence is determined by the initial condition $(a_1,a_2)$.\\ 
+
+We wish to find a basis, in which the elements are geometric series.\\
+
+Suppose a geometric series $a_n=x^n$ satisfy the recurrence relation. Then we have 
+\begin{equation*}
+x^n=\alpha x^{n-1}+\beta x^{n-2}
+\end{equation*}
+This give us 
+\begin{equation*}
+x^2-\alpha x-\beta =0
+\end{equation*}
+Solving the equation, we have
+\begin{equation*}
+x=\frac{\alpha \pm \sqrt{\alpha ^2+4\beta } }{2}
+\end{equation*}
+Then each sequence satisfying the recurrence relation can be written in the form 
+\begin{equation*}
+a_n= A(\frac{\alpha +\sqrt{\alpha ^2+4\beta } }{2})^n+B(\frac{\alpha -\sqrt{\alpha ^2+4\beta } }{2})^n
+\end{equation*}
+
+\end{proof}
+\begin{corollary}
+\textbf{(Solution of Homogeneous Recurrence Relation)} Suppose 
+\begin{align*}
+a_n=\sum_{k=1}^m c_ka_{n-k}
+\end{align*}
+The exact solution is clearly determined by the first $a_1,\dots ,a_m$. Then we know 
+\begin{align*}
+\text{ Set of solutions is a $m$-dimensional vector space }
+\end{align*}
+If lucky, the basis can be gained by solving the equation 
+\begin{align*}
+\alpha^m=\sum_{k=1}^{m}c_k\alpha^{k-1}
+\end{align*}
+to have basis 
+\begin{align*}
+\set{\set{\alpha_1^n}_{n\inn},\set{\alpha _2^n}_{n\inn},\dots ,\set{\alpha _m^n}_{n\inn}}
+\end{align*}
+Then we can express the general solution by 
+\begin{align*}
+a_n=\sum_{k=1}^m d_k \alpha_k^n
+\end{align*}
+\end{corollary}
+\section{Solution of Inhomogeneous Recurrence Relation}
+\begin{theorem}
+\textbf{(General Solution of Inhomogeneous Recurrence Relation)} Consider the recurrence relation $a_n$ 
+ \begin{align*}
+a_n=\sum_{k=1}^m c_ka_{n-k} +f(n)
+\end{align*}
+If we have a particular solution $a_n^*$, and a solution to  $b_n$ to the homogeneous recurrence relation 
+ \begin{align*}
+b_n=\sum_{k=1}^m c_kb_{n-k}
+\end{align*}
+Then $(a+b)_n$ is a solution. To guess a particular solution $a_n^*$, we first have to observe the form of  $f(n)$. If $f(n)$ is a polynomial of degree $p$, then we can guess 
+\begin{align*}
+a_n^*=A_pn^p+A_{p-1}n^{p-1}+\cdots +A_1n+A_0
+\end{align*}
+\end{theorem}
+\section{Solution with Generating Function}
+\begin{question}{}{}
+Let $a_{-1}=0$. Find a generating function
+\begin{align*}
+g(x)=\sum_{k=0}a_k x^k
+\end{align*}
+that satisfy the recurrence relation 
+\begin{align}
+\label{eq1}\forall n\geq 1,a_n=a_{n-1}+n
+\end{align}
+\end{question}
+\begin{proof}
+Multiplying \myref{Equation}{eq1} on both side with $x^n$, we have
+\begin{align*}
+a_nx^n=a_{n-1}x^n +nx^n
+\end{align*}
+Then we can rewrite $g(x)$ into 
+\begin{align*}
+g(x)&=\sum_{k=0}a_kx^k\\
+&=a_0 +\sum_{k=1}a_kx^k\\
+&=a_0 +\sum_{k=1}\big(a_{k-1}x^k+kx^k\big)\\
+&=a_0+x\sum_{k=1}a_{k-1}x^{k-1} + \sum_{k=1} kx^k\\
+&=a_0+x\sum _{k=1}a_{k-1}x^{k-1} +\sum_{k=1} kx^k\\
+&=a_0+x\sum_{k=0}a_kx^k+\sum_{k=1} \binom{k}{1}x^k\\
+&=a_0+xg(x)+\sum_{k=0}\binom{k+1}{1}x^{k+1}\\
+&=a_0+xg(x)+ x\sum_{k=0} \binom{k+1}{k}x^k\\
+&=a_0+xg(x)+x \sum_{k=0} H^2_k x^k\\
+&=a_0+x g(x)+\frac{x}{(1-x)^2}
+\end{align*}
+In summary 
+\begin{align*}
+g(x)=a_0+xg(x)+\frac{x}{(1-x)^2}
+\end{align*}
+This give us 
+\begin{align*}
+g(x)=\frac{a_0}{1-x}+\frac{x}{(1-x)^3}
+\end{align*}
+Then we see 
+\begin{align*}
+g(x)&=a_0 \sum_{k=0}^\infty x^k+x \sum_{k=0}^\infty H^3_k x^k\\
+&=a_0\sum _{k=0}^\infty x^k + \sum_{k=0}^\infty \binom{k+2}{k}x^{k+1}\\\
+&=a_0 x_0 +\big(\sum_{k=1} a_0x^k+ \binom{k+1}{k-1}x^k\big)\\
+&=a_0x_0+\sum_{k=1} \big (a_0+\binom{k+1}{k-1}\big)x^k\\
+&=a_0x_0+\sum_{k=1} \big(a_0+\binom{k+1}{2}\big)x^k\\
+&=\sum_{k=0} \big(a_0+\binom{k+1}{2})x^k
+\end{align*}
+\end{proof}
+\begin{question}{}{}
+Use generating function to solve the recurrence relation 
+ \begin{align*}
+\forall n\geq 2,a_n=a_{n-1}+a_{n-2}
+\end{align*}
+where the initial condition is 
+\begin{align*}
+a_0=a_1=1
+\end{align*}
+\end{question}
+Suppose 
+\begin{align*}
+g(x)=\sum_{k=0}^\infty a_kx^k
+\end{align*}
+satisfy the recurrence relation. Then we have 
+\begin{align*}
+g(x)-a_0-a_1x&=\sum_{k=2}^\infty a_kx^k\\
+&=\sum_{k=2}^\infty (a_{k-1}+a_{k-2})x^k\\
+&=x\sum_{k=2}^\infty a_{k-1}x^{k-1}+x^2\sum_{k=2}^\infty a_{k-2}x^{k-2}\\
+&=x\sum_{k=1}^\infty a_kx^k+x^2 \sum_{k=0}^\infty a_kx^k\\
+&=x(g(x)-1)+x^2g(x)
+\end{align*}
+Then we have 
+\begin{align*}
+  (1-x-x^2)g(x)=1
+\end{align*}
+Notice
+\begin{align*}
+  1-x-x^2=-(x-\frac{-1+\sqrt{5} }{2})(x-\frac{-1-\sqrt{5} }{2})
+\end{align*}
+Then 
+\begin{align*}
+g(x)&=\frac{-1}{(x-\frac{-1+\sqrt{5} }{2})(x-\frac{-1-\sqrt{5} }{2})}\\
+&=\frac{\frac{-1}{\sqrt{5} }}{x-\frac{-1+\sqrt{5} }{2}}+\frac{\frac{1}{\sqrt{5} }}{x-\frac{-1-\sqrt{5} }{2}}\\
+&=\frac{\frac{1}{\sqrt{5}}}{\frac{-1+\sqrt{5} }{2}-x}+\frac{\frac{-1}{\sqrt{5} }}{\frac{-1-\sqrt{5} }{2}-x}\\
+&=\frac{\frac{2}{\sqrt{5}(-1+\sqrt{5} ) }}{1-\frac{2}{-1+\sqrt{5} }x}+\frac{\frac{-2}{\sqrt{5}(-1-\sqrt{5} ) }}{1-\frac{2}{-1-\sqrt{5} }x}\\
+&=\frac{2}{5-\sqrt{5} } \sum_{k=0}^\infty (\frac{2}{-1+\sqrt{5} }x)^k+\frac{-2}{-5-\sqrt{5} }\sum_{k=0}^\infty (\frac{2}{-1-\sqrt{5} }x)^k
+\end{align*}
 \chapter{HW}
 \section{HW3}
 \begin{question}{}{}
@@ -373,4 +552,305 @@ Then the generating function for the number of ways to toss $r$ identical dice a
   \frac{1}{2}\left[ \left(\frac{1-x^7}{1-x} \right)^r - \left(\frac{1+x^7}{1+x}\right)^r\right]
 \end{equation*}
 \end{proof}
+\section{HW4}
+\begin{question}{}{}
+How many 10-letter words are there in which each of the letters e,n,r,s occur 
+\begin{enumerate}[label=(\alph*)]
+  \item At most once?
+  \item At least once?
+\end{enumerate}
+\end{question}
+\begin{proof}
+The generating function for $(a)$ is 
+\begin{align}
+  (\frac{x^0}{0!}+\frac{x^1}{1!})^{4}\times (\sum_{n=0}^\infty \frac{x^n}{n!})^{22}&= (x+1)^4 e^{22x}\\
+  &=(x^4+4x^3+6x^2+4x+1) \sum_{n=0}^\infty \frac{(22x)^n}{n!}
+\end{align}
+Then the 10th-coefficient is 
+\begin{equation*}
+  x^4 \times \frac{(22x)^6}{6!}+4x^3 \times \frac{(22x)^7}{7!}+6x^2 \times \frac{(22x)^8}{8!}+4x\times \frac{(22x)^9}{9!}+\frac{(22x)^{10}}{10!}
+\end{equation*}
+which is 
+\begin{equation*}
+  (22^6\times (7\times 8\times 9\times 10)+4\times22^7 \times 8 \times 9\times 10+6\times 22^8\times 9\times 10+4\times 22^9\times 10+22^{10})\times \frac{x^{10}}{10!}
+\end{equation*}
+The generating function for $(b)$ is 
+\begin{align*}
+  (\sum_{n=1}^\infty \frac{x^n}{n!})^4 \times (\sum_{n=0}^\infty \frac{x^n}{n!})^{22}&=(e^x-1)^4 e^{22x}\\
+  &=(e^{4x}-4e^{3x}+6e^{2x}-4e^x+1)e^{22x}\\
+  &=e^{26x}-4e^{25x}+6e^{24x}-4e^{23x}+e^{22x}\\
+  &=\sum_{n=0}^\infty \frac{(26x)^n}{n!}-\sum_{n=0}^\infty \frac{4(25x)^n}{n!}+\sum_{n=0}^\infty \frac{6(24x)^n}{n!}-\sum_{n=0}^\infty \frac{4(23x)^n}{n!}+\sum_{n=0}^\infty \frac{(22x)^n}{n!}
+\end{align*}
+Then the $10$th-coefficient for $(b)$ is 
+\begin{equation*}
+  (26^{10}-25^{10}\times 4+24^{10}\times 6-23^{10}\times 4+22^{10})\times \frac{x^{10}}{10!}
+\end{equation*}
+\end{proof}
+\begin{question}{}{}
+Find a recurrence relation for the number of $n$-digit ternary $(0,1,2)$ sequence in which no $1$ appears anywhere to the right of any $2$.
+\end{question}
+\begin{proof}
+Consider an $n$-digit sequence $\set{x_i}_{i=1}^n$ with desired property:
+\begin{equation*}
+\forall i, x_i\in \set{0,1,2}\text{ and }x_i=2\implies  x_{i+1}\neq 1 
+\end{equation*}
+If  $x_n\in \set{0,2}$, we see 
+\begin{equation*}
+\set{x_i}_{i=1}^{n-1}\text{ satisfy desired property }\implies   \set{x_i}_{i=1}^{n}\text{ satisfy desired property }
+\end{equation*}
+Notice that the converse of the above statement is clearly true, so we have 
+\begin{equation*}
+\set{x_i}_{i=1}^{n-1}\text{ satisfy desired property }\iff  \set{x_i}_{i=1}^n\text{ satisfy desired property }
+\end{equation*}
+If $x_n=1$, we see
+\begin{equation*}
+\set{x_i}_{i=1}^{n-1}\text{ satisfy desired property and $x_{n-1}\neq 2$}\implies \set{x_i}_{i=1}^n\text{ satisfy desired property }
+\end{equation*}
+Again notice that the converse of the above statement is clearly true under the hypothesis $x_n=1$
+ \begin{equation*}
+\set{x_i}_{i=1}^{n-1}\text{ satisfy desired property and $x_{n-1}\neq 2$}\iff  \set{x_i}_{i=1}^n\text{ satisfy desired property }
+\end{equation*}
+Also, if $x_{n-1}=2$, we see 
+\begin{equation*}
+\set{x_i}^{n-1}_{i=1}\text{ satisfy desired property}\iff  \set{x_i}^{n-2}_{i=1}\text{ satisfy desired property }
+\end{equation*}
+Now we reach to the recurrence relation
+\begin{equation*}
+a_n=2a_{n-1}+(a_{n-1}-a_{n-2})=3a_{n-1}-a_{n-2}
+\end{equation*}
+where the initial condition is clearly 
+\begin{equation*}
+a_1=3\text{ and }a_2=3+3+2=8
+\end{equation*}
+\end{proof}
+\begin{question}{}{}
+Find an solve a recurrence relation for the number of ways to make a pile of $n$ chips using red, white, and blue chips and such that no two red chips are together.
+\end{question}
+\begin{proof}
+If the last chip is of the color white or blue, it is clear that the pile is legal if and only if the rest of pile is legal. It the last chip is of color red, the pile is legal if and only if the rest of the pile is legal and the second last chip is of the color white or blue. Then we reach to the recurrence relation
+\begin{equation*}
+  a_n=2a_{n-1}+2a_{n-2}
+\end{equation*}
+The sequence that satisfy the above homogeneous is a vector space of dimension $2$. Suppose a geometric sequence $a_n=\alpha^n$ is in the vector space. We have
+\begin{equation*}
+\alpha^n=2\alpha ^{n-1}+2\alpha ^{n-2}
+\end{equation*}
+Solving the quadratic equation, we have 
+\begin{equation*}
+\alpha =1 \pm \sqrt{3} 
+\end{equation*}
+Then we see the set of sequence 
+\begin{equation*}
+\set{\set{(1+\sqrt{3} )^n}_{n\inn},\set{(1-\sqrt{3} )^n}_{n\inn}}
+\end{equation*}
+form a basis of the vector space.\\
+
+Now, let 
+\begin{equation*}
+a_n=A(1+\sqrt{3} )^n+B(1-\sqrt{3} )^n
+\end{equation*}
+Because $a_1=3,a_2=8$  ($\because$ simple computation), we solve the linear equation  
+\begin{equation*}
+  \begin{cases}
+    A(1+\sqrt{3} )+B(1-\sqrt{3} )=3\\
+    A(1+\sqrt{3} )^2+B(1-\sqrt{3} )^2=8
+  \end{cases}
+\end{equation*}
+to have
+\begin{equation*}
+A=\frac{1}{2}+\frac{\sqrt{3} }{3}\text{ and }B=\frac{1}{2}-\frac{\sqrt{3} }{3}
+\end{equation*}
+We now have the solution 
+\begin{equation*}
+  a_n=(\frac{1}{2}+\frac{\sqrt{3} }{3}) (1+\sqrt{3} )^n +(\frac{1}{2}-\frac{\sqrt{3} }{3} )(1-\sqrt{3} )^n
+\end{equation*}
+\end{proof}
+\begin{question}{}{}
+Find a general solution to 
+\begin{equation*}
+a_n-5a_{n-1}+6a_{n-2}=2+3n
+\end{equation*}
+\end{question}
+\begin{proof}
+From the form of right hand side, we can guess that the form of particular solution is 
+\begin{equation*}
+a_n=xn+y
+\end{equation*}
+Then we can solve $x,y$ from 
+\begin{align*}
+&xn+y-5(x(n-1)+y)+6(x(n-2)+y)=2+3n\\
+  \implies & n(x-5x+6x)+(y+5x-5y-12x+6y)=3n+2\\
+  \implies  &(2x)n+(-7x+2y)=3n+2\\
+  \implies &\begin{cases}
+    2x=3\\
+    -7x+2y=2
+  \end{cases}\\
+    \implies &x=\frac{3}{2}\text{ and }y=\frac{25}{4}
+\end{align*}
+Clearly, if $b_n,c_n$ satisfy 
+ \begin{equation*}
+\begin{cases}
+  b_n-5b_{n-1}+6b_{n-2}=0\\
+  c_n-5c_{n-1}+6c_{n-2}=3n+2
+\end{cases}
+\end{equation*}
+we have 
+\begin{equation*}
+  (b+c)_n-5(b+c)_{n-1}+6(b+c)_{n-2}=3n+2
+\end{equation*}
+We have already solved  a particular $c_n=\frac{3}{2}n+\frac{25}{4}$. We now solve for second order homogenous recurrence relation 
+\begin{equation*}
+b_n=5b_{n-1}-6b_{n-2}
+\end{equation*}
+Consider 
+\begin{equation*}
+\alpha^2=5\alpha-6
+\end{equation*}
+We have 
+\begin{equation*}
+\alpha=2\text{ or }3
+\end{equation*}
+We now see 
+\begin{equation*}
+a_n=A 2^n+B 3^n+\frac{3}{2}n+\frac{25}{4}
+\end{equation*}
+\end{proof}
+\section{Final}
+\begin{theorem}
+\textbf{(5.5.25)}
+
+\begin{align*}
+\binom{2n}{n}^2 = \sum_{k=0}^n \frac{(2n)!}{(k!)^2 (n-k)!^2}
+\end{align*}
+\end{theorem}
+\begin{proof}
+Expand 
+\begin{align*}
+\binom{2n}{n}^2 = \sum_{k=0}^n \binom{n}{k}^2 \binom{2n}{n}
+\end{align*}
+\end{proof}
+\begin{theorem}
+\textbf{(5.5.26)} Given $n\leq m$
+\begin{align*}
+\sum_{k=0}^n \binom{n}{k}\binom{m}{k}= \binom{n+m}{m}
+\end{align*}
+\end{theorem}
+\begin{proof}
+Consider walking from $(0,0)$ to $(m,n)$, and notice that we must cross the line $L:y+x=n$
+\end{proof}
+\begin{theorem}
+\textbf{(5.5.28)} Show that 
+\begin{align*}
+\sum_{j=0}^k \binom{n+k-j-1}{k-j} \binom{m+j-1}{j}=\binom{n+m+k-2}{k}
+\end{align*}
+\end{theorem}
+\begin{proof}
+Notice the textbook is wrong on this one. Consider walking from $(0,0)$ to $(k,n-1+m-1)$, and notice that we must cross the line $L:y=n-1$
+\end{proof}
+\begin{theorem}
+\textbf{(6.4.7)}
+\begin{enumerate}[label=(\alph*)]
+  \item $\frac{3^r+1}{2}$, $g(x)=e^{2x}(\frac{e^x+e^{-x}}{2})$ 
+  \item $\frac{3^r+2+(-1)^r}{4}$, $g(x)=e^{x}(\frac{e^x+e^{-x}}{2})^2$ 
+  \item $3^r-2^{r+1}+1,$ $g(x)=(e^x-1)^2 e^x$
+\end{enumerate}
+\end{theorem}
+\begin{theorem}
+\textbf{(6.4.10)}
+\begin{enumerate}[label=(\alph*)]
+  \item $3^r-3 \cdot 2 ^{r-2}\cdot \binom{r}{2} + 18 \binom{r}{4}$, $g(x)=(e^x-\frac{x^2}{2})^3$. The coefficient I compute is only for when $r>6$.  I'm not sure if the result remain valid for $0\leq r\leq 6$
+  \item $\frac{3^k}{4}-2^k+\frac{3}{2}+\frac{(-1)^k}{4}+\binom{0}{k},g(x)=(\frac{e^x+e^{-x}}{2}-1)^2 e^x$
+\end{enumerate}
+\end{theorem}
+\begin{theorem}
+\textbf{(6.4.11)}
+\begin{align*}
+\frac{4^r + \binom{0}{r}}{2}, g(x)=(\frac{e^{2x}+e^{-2x}}{2})e^{2x}
+\end{align*}
+\end{theorem}
+\begin{theorem}
+\textbf{(Conjecture of Question 6.4.12)} If we ask for the total number of 0s, 1s and 2s are even, the generating function should be 
+ \begin{align*}
+g(x)=(\frac{e^{3x}+e^{-3x}}{2})e^x?
+\end{align*}
+\end{theorem}
+\begin{theorem}
+\textbf{(7.3.3)}
+\begin{enumerate}[label=(\alph*)]
+  \item $a_n=3a_{n-1}+4a_{n-2},a_0=a_1=1\implies a_n=\frac{1}{10}4^{n+1}+ \frac{-6}{10}(-1)^{n+1}$ 
+  \item $a_n=a_{n-2},a_0=a_1=1\implies a_n=1$
+  \item $a_n=2a_{n-1}-a_{n-2}, a_0=a_1=2\implies $ multiplicity is greater than $1$, won't be in exam. 
+  \item $a_n=3a_{n-1}-3a_{n-2}+a_{n-3}, a_0=a_1=1,a_2=2\implies $ multiplicity is greater than $1$
+\end{enumerate}
+\end{theorem}
+\begin{theorem}
+\textbf{(7.4.9)}
+\begin{enumerate}[label=(\alph*)]
+  \item $a_n=3a_{n-1}-2,a_0=0\implies a_n=1-3^n$ 
+  \item $a_n=2a_{n-1}+(-1)^n,a_0=2 \implies a_n=\frac{5}{3}2^n + \frac{(-1)^n}{3}$ 
+  \item $a_n=2a_{n-1}+n ,a_0=1 \implies a_n=(-n-2)+3 \cdot 2^n$ 
+  \item $a_n=2a_{n-1}+2n^2,a_0=3 \implies a_n=15 \cdot 2^n+ (-2n^2-8n-12)$
+\end{enumerate}
+\end{theorem}
+\begin{theorem}
+\textbf{(7.4.19)}
+\begin{enumerate}[label=(\alph*)]
+  \item $a_n^2=2a_{n-1}^2 +1, a_0=1 \implies a_n=\sqrt{2^{n+1}-1} $ 
+  \item $a_n=-na_{n-1}+n!,a_0=1 \implies a_n=n!(\frac{1}{2}\cdot (-1)^n+\frac{1}{2})$ 
+\end{enumerate}
+Hint for (b): Let  $b_n=\frac{a_n}{n!}$
+\end{theorem}
+\begin{theorem}
+\textbf{(Conjecture)} If the remaining term is of the form $r^n+n^m$ , we should guess particular solution by 
+\begin{align*}
+a_n= c_{m+1} r^n + \sum_{k=0}^m c_k n^k
+\end{align*}
+\end{theorem}
+\begin{theorem}
+\textbf{(7.5.3)} 
+\begin{align*}
+\forall n\geq 1,a_n=\sum_{i=0}^{n-1}a_i a_{n-1-i}, a_0=1 \implies g(x)=\frac{1}{\sqrt{1-x} }
+\end{align*}
+\begin{align*}
+\forall n\geq 3, a_n=\sum_{i=2}^{n-2}a_i a_{n-i},a_0=a_1=a_2=1 \implies (g(x)-1-x)^2=g(x)-x^2-x-1
+\end{align*}
+\begin{align*}
+\forall n\geq 2, a_n=\sum_{i=1}^{n-1} 2^i a_{n-i},a_0=a_1=1 \implies \frac{g(x)-1}{1-2x} =g(x)-x-1
+\end{align*}
+\end{theorem}
+\begin{theorem}
+\textbf{(7.5.8)}
+\begin{align*}
+\forall n\geq 3, a_n=3a_{n-1}-a_{n-3}, \begin{cases}
+  a_0=-1\\
+  a_1=0\\
+  a_2=0
+\end{cases}\implies g(x)=\frac{-3x-1}{x^3-3x+1}
+\end{align*}
+\end{theorem}
+\begin{theorem}
+\textbf{(8.1.35)}
+\begin{align*}
+25\text{ people bring just salad and $5$ bring just sandwiches }
+\end{align*}
+\end{theorem}
+\begin{theorem}
+\textbf{(8.1.36)}
+\begin{align*}
+2\text{ people take Greek and Hebrew }
+\end{align*}
+\end{theorem}
+\begin{theorem}
+\textbf{(8.3.2)}
+\begin{enumerate}[label=(\alph*)]
+  \item $6x^4+20x^3+21x^2+8x+1$
+  \item $6x^4+17x^3+17x^2+7x+1$ 
+  \item $4x^3+12x^2+7x+1$ 
+  \item $4x^3+14x^2+8x+1$
+\end{enumerate}
+$H^6_9 - (6H^5_9 - 15 H^4_9 +20 H^3_9 - 15 H^2_9 + 6 H^1_9)$
+\begin{align*}
+  (1+3x)^3+2x(1+3x)^2+x^2()
+\end{align*}
+\end{theorem}
 \end{document}
