--- a/Probability/Probability.tex
+++ b/Probability/Probability.tex
@@ -158,6 +158,8 @@ then we have
 \end{equation}
 
 The following concern Borel $\sigma$-algebra
+
+$M=\set{X^{-1}[x]:x \in R(X)}$
 \end{minipage}}
 \begin{definition}
 \label{0.1.9}
@@ -1486,7 +1488,7 @@ Let $\sigma=\sqrt{npq} $ and $\mu=np$. We have
 &\approx 0.8825
 \end{align*}
 \end{proof}
-\chapter{Joint Distribution}
+\chapter{Independence}
 \section{Independence of Event}
 \begin{definition}
 \label{3.1.1}
@@ -1630,8 +1632,15 @@ P\left(A\cap B \right)=\frac{1}{9}\neq \frac{1}{3}\times \frac{4}{9}=P\left(A \r
 \sigma\left(X \right):=\set{X^{-1}\left[B \right]:B\in \mathcal{B}\left(\R \right)}
 \end{equation*}
 \end{definition}
-\begin{lemma}
+\begin{definition}
 \label{3.2.2}
+\textbf{(Definition of Independence of Random Variable)} Given two random variable $X,Y$ on the same probability space  $(\Omega,\mathcal{F})$, we say $X,Y$ are independent if 
+ \begin{align*}
+\sigma (X)\text{ and }\sigma (Y)\text{ are independent }
+\end{align*}
+\end{definition}
+\begin{lemma}
+\label{3.2.3}
 Suppose 
 \begin{equation*}
 A\text{ is independent of }C\text{ and }B\text{ is independent of  }C\text{ and }A\cap B=\varnothing
@@ -1670,14 +1679,19 @@ and
 \begin{equation*}
 P\left(A_{TT}\cap A_{\cdot \cdot H} \right)=P\left(\set{TTH} \right)=\frac{1}{q^2p}=\frac{1}{q^2}\times \frac{1}{p}=P\left(A_{TT} \right)P\left(A_{\cdot \cdot H} \right)
 \end{equation*}
-Then by \myref{corollary}{3.1.3} and \myref{lemma}{3.2.2}, we see 
+Then by \myref{corollary}{3.1.3} and \myref{lemma}{3.2.4}, we see 
 \begin{equation*}
 \sigma \left(S_2 \right),\sigma \left(\frac{S_3}{S_2} \right)\text{ are independent }
 \end{equation*}
 \end{proof}
 \begin{theorem}
-\label{3.2.3}
-\textbf{(Change of Independent Random Variable)} If $X,Y$ are independent random variables, then 
+\label{3.2.4}
+\textbf{(Change of Independent Random Variable)} Given 
+\begin{enumerate}[label=(\alph*)]
+  \item $X,Y$ are independent
+  \item $g,h$ are measurable.  
+\end{enumerate}
+Then
 \begin{equation*}
 g\left(X \right)\text{ and }h\left(Y \right)\text{ are independent }
 \end{equation*}
@@ -1689,7 +1703,7 @@ This is an immediate consequence of
 \end{equation*}
 \end{proof}
 \fbox{\begin{minipage}{39em}
-An example for \myref{Theorem}{3.2.3} is $X\left(H \right)=1$ and $X\left(T \right)=-1$. We see 
+An example for \myref{Theorem}{3.2.4} is $X\left(H \right)=1$ and $X\left(T \right)=-1$. We see 
 \begin{equation*}
 \sigma \left(X \right)=\set{\varnothing,\set{H},\set{T},\Omega} 
 \end{equation*}
@@ -1698,6 +1712,91 @@ and
 \sigma\left(X^2 \right)=\set{\varnothing ,\Omega}\subset \sigma \left(X \right)
 \end{equation*}
 \end{minipage}}
+\begin{theorem}
+\label{3.2.5}
+\textbf{(Joint Distribution of Independent Random Variable)} 
+\begin{align*}
+&X\text{ and }Y\text{ are independent }\\
+\iff & \forall A,B \in \mathcal{B}(\R), P(X\in A\text{ and }Y\in B)=P(X\in A)P(Y\in B)
+\end{align*}
+\end{theorem}
+\begin{proof}
+$(\longleftarrow)$\\
+
+Let $V\in \sigma (X)$ and $W\in \sigma (Y)$. We wish to prove 
+\begin{align*}
+  \vi{P(V\cap W)=P(V)P(W)}
+\end{align*}
+Because $V\in \sigma (X)$ and $W\in \sigma (Y)$, we know there exists $A,B\in \mathcal{B}(\R)$ such that 
+\begin{align*}
+V=X^{-1}[A]\text{ and }W=Y^{-1}[B]
+\end{align*}
+Then 
+\begin{align*}
+P(V\cap W)&=P(X^{-1}[A]\cap Y^{-1}[B])\\
+&=P(\set{\omega \in \Omega: X\in A\text{ and }Y\in B})\\
+&=P(X\in A\text{ and }Y\in B)\\
+&=P(X\in A)P(Y\in B)\\
+&=P(X^{-1}[A])P(Y^{-1}[B])\\
+&=P(V)P(W)\vdone
+\end{align*}
+$(\longrightarrow)$\\
+
+Let $A,B\in \mathcal{B}(\R)$. We wish to prove 
+\begin{align*}
+\blue{P(X\in A\text{ and }Y\in B)=P(X\in A)P(Y\in B)}
+\end{align*}
+In other words, we wish to prove 
+\begin{align*}
+P(\set{\omega\in\Omega:X\in A\text{ and }Y\in B})=P(\set{\omega\in\Omega:X\in A})P(\set{\omega\in\Omega:Y\in B})
+\end{align*}
+Notice 
+\begin{align*}
+\set{\omega \in \Omega:X\in A\text{ and }Y\in B}=X^{-1}[A]\cap Y^{-1}[B]
+\end{align*}
+and notice 
+\begin{align*}
+\set{\omega\in\Omega:X\in A}=X^{-1}[A]\in \sigma(X)\text{ and }\set{\omega\in\Omega:Y\in B}=Y^{-1}[B]\in \sigma (Y)
+\end{align*}
+Then because $X,Y$ are independent, we now have 
+ \begin{align*}
+P(\set{\omega\in \Omega:X\in A\text{ and }Y\in B})&=P(X^{-1}[A]\cap Y^{-1}[B])\\
+&=P(X^{-1}[A])P(Y^{-1}[B])\\
+&=P(\set{\omega\in \Omega:X\in A})P(\set{\omega\in\Omega:Y\in B}) \bdone
+\end{align*}
+
+
+
+\end{proof}
+\begin{corollary}
+\label{3.2.6}
+\textbf{(Joint Distribution of Independent Random Variable)} Given two discrete random variable $X,Y$, we have
+\begin{align*}
+X\text{ and }Y\text{ are independent }\iff \forall (x,y)\in R(X)\times R(Y), f_{X,Y}(x,y)=f_X(x)f_Y(y)
+\end{align*}
+\end{corollary}
+\begin{proof}
+$(\longrightarrow)$\\
+
+Notice that 
+\begin{align*}
+&f_{X,Y}(x,y)=P(X\in \set{x}\text{ and }Y\in \set{y})\\
+\text{ and }&f_{X}(x)=P(X\in \set{x})\text{ and }f_Y(y)=P(Y\in \set{y})
+\end{align*}
+and we are done.\\
+
+$(\longleftarrow)$\\
+
+Let $A,B\in \mathcal{B}(\R)$. We wish to prove 
+\begin{align*}
+\vi{P(X\in A\text{ and }Y\in B)=P(X\in A)P(Y\in B)}
+\end{align*}
+
+\end{proof}
+\begin{corollary}
+\label{3.2.7}
+\textbf{(Joint Distribution of Independent Random Variable)} Given two continuous random 
+\end{corollary}
 \section{Bayes' Theorem}
 \begin{question}{}{}
 We have the following knowledge 
@@ -1752,6 +1851,7 @@ Then
 \end{equation*}
 \end{proof}
 \begin{theorem}
+\label{3.3.1}
 \textbf{(Bayes's Theorem)}
 \begin{equation*}
 P\left(B|A\right)=\frac{P\left(B\cap A \right)}{P\left(A \right)}=\frac{P\left(A|B \right)P\left(B \right)}{P\left(A \right)}
@@ -1781,7 +1881,34 @@ P\left(B|A \right)=\frac{P\left(A\cap B \right)}{P\left(A \right)}=\frac{P\left(
 where $P\left(A \right)$ is computed as above.
 \end{proof}
 \begin{theorem}
-\textbf{(General Form of Bayes' Theorem)} Let $\set{F_1,F_2,\dots , F_n}\subseteq \mathcal{F}$ be a partition of $\Omega$. We have 
+\label{3.3.2}
+\textbf{(First Bayes' Theorem)} Let $\set{F_1,\dots ,F_n}\subseteq \mathcal{F}$ be a partition of $\Omega$. We have 
+\begin{align*}
+P(A)=\sum_{k=1}^n P(A|F_k)P(F_k)
+\end{align*}
+\end{theorem}
+\begin{question}{}{}
+Consider the situation: We try to put $u$ balls into distinct $n$ barrels. Let $p_{r,k}$ be the probability that there are exactly $r$ barrels filled with balls, when the first  $k\leq u$ balls is putted.\\
+
+Find $p_{n,u}$ by giving a recurrence relation. 
+\end{question}
+\begin{proof}
+We have 
+\begin{align*}
+p_{r,k}=p_{r,k-1} \frac{r}{n}+p_{r-1,k-1} \frac{n-(r-1)}{n}
+\end{align*}
+In fact, we have 
+\begin{align*}
+  p_{r,k}&=\\
+&=\sum_{i=0}^n p_{i,{k-1}}P(\text{$r$ barrels is filled with the first $k$ balls}|\text{$i$ barrels are filled with the first  $k-1$ balls})
+\end{align*}
+where we define $P(A|B)=0$ if $P(B)=0$.\\
+
+The reason we have the recurrence relation is that the conditional probability is $0$ when  $i<r-1$ or $i>r$.    
+\end{proof}
+\begin{theorem}
+\label{3.3.3}
+\textbf{(Second Bayes' Theorem)} Let $\set{F_1,F_2,\dots , F_n}\subseteq \mathcal{F}$ be a partition of $\Omega$. We have 
 \begin{equation*}
 P\left(F_j|A \right)=\frac{P\left(A|F_j \right)P\left(F_j \right)}{\sum_{i=1}^n P\left(A|F_i \right)P\left(F_i \right)}
 \end{equation*}
@@ -1796,23 +1923,508 @@ P\left(F_j|A \right)&=\frac{P\left(F_j\cap A \right)}{P\left(A \right)}\\
 \end{proof}
 \section{Independent Disjoint Grouping Theorem}
 \begin{definition}
+\label{3.4.1}
 \textbf{(Definition of Sub-$\sigma$-Algebra Being Independent)} In $\left(\Omega,\mathcal{F},P \right)$, we say a finite amount of sub-$\sigma$-algebra $\set{\mathcal{G}_1,\mathcal{G}_2,\dots ,\mathcal{G}_n}$ is independent if we arbitrarily choose one event $G_i$ from each sub-$\sigma$-algebra $\mathcal{G}_i$, we have
 \begin{equation*}
 P\left(\bigcap_{i=1}^n G_i \right)=\prod_{i=1}^n P\left(G_i \right)
 \end{equation*}
 \end{definition}
 \begin{definition}
+\label{3.4.2}
 \textbf{(Definition of Set of Random Variable Being Independent)} We say a set of random variable $\set{x_1,\dots ,x_n}$ is independent if 
 \begin{equation*}
 \set{\sigma \left(X_1 \right),\sigma \left(X_2 \right),\dots ,\sigma\left(X_n \right)}\text{ are independent }
 \end{equation*}
 \end{definition}
 \begin{theorem}
+\label{3.4.3}
 \textbf{(Example)}  
 \begin{equation*}
 \set{X_1,X_2,X_3,X_4}\text{ are independent }\implies X_2X_3\text{ is independent of }X_1+\cos \left(2X_4 \right)
 \end{equation*}
 \end{theorem}
+\chapter{Multiple Random Variable}
+\section{Joint Distribution}
+\begin{definition}
+\label{4.1.1}
+\textbf{(Definition of Random Vector)} Given $(\Omega,\mathcal{F},P)$ and two random variables $X,Y$ on $(\Omega,\mathcal{F})$. Consider the random vector
+\begin{equation*}
+  (X,Y):(\Omega,\mathcal{F},P)\rightarrow (\R \times \R,\sigma(\mathcal{B}\times \mathcal{B}))
+\end{equation*}
+Notice that $\sigma (\mathcal{B}\times \mathcal{B})$ is the smallest sigma algebra that contain $\mathcal{B}\times \mathcal{B}$. This shows that not all element element in $\sigma (\mathcal{B},\mathcal{B})$ is rectangular. That is, not all element is of the form 
+\begin{equation*}
+A\times B
+\end{equation*}
+We see 
+\begin{equation*}
+[0,2]\times [1,2]\text{ and }[1,2]\times [0,2]\text{ are both element of $\sigma(\mathcal{B},\mathcal{B})$ }
+\end{equation*}
+and their union is not rectangle. The induced measure by the pair of random vector is defined to be
+\begin{equation*}
+\mathcal{L}_{X,Y}(C)=P(\set{\omega\in \Omega:(X,Y)\in C})
+\end{equation*}
+Notice that given rectangular $C=A\times B$ where $A,B \in \mathcal{B}$. We have
+\begin{equation*}
+\set{\omega \in \Omega :(X,Y)\in C}=\set{\omega\in \Omega :X \in A}\cap \set{\omega\in \Omega :X\in B}
+\end{equation*}
+This kind of expression can only be given if $C$ is rectangular.
+\end{definition}
+\begin{definition}
+\label{4.1.2}
+\textbf{(Definition of Discrete Joint Distribution)} Given $(\Omega,\mathcal{F},P)$ and two discrete random variable $X,Y$. The random vector 
+ \begin{equation*}
+   (X,Y):(\Omega,\mathcal{F},P)\rightarrow (\R\times \R, \sigma (\mathcal{B}\times \mathcal{B}))
+\end{equation*}
+has joint probability $p_{(X,Y)}$ defined on $R(X)\times R(Y)$ by
+\begin{align*}
+  p_{(X,Y)}(x,y)&:=P(X=x,Y=y)\\
+  &=P(\omega \in \Omega: (X,Y)=(x,y))\\
+  &=\mathcal{L}_{(X,Y)}(\set{x},\set{y})
+\end{align*}
+\end{definition}
+\begin{theorem}
+\label{4.1.3}
+\textbf{(Computation of Probability)} Let $A\in \sigma (\mathcal{B}\times \mathcal{B})$  be a joint Borel set. We have 
+\begin{align*}
+  P((X,Y)\in A)&=P(\omega\in \Omega:(X,Y)\in A)\\
+  &=\sum_{(x,y)\in A}P(\set{\omega\in \Omega: (X,Y)=(x,y)})\\
+  &=\sum_{(x,y)\in A}p_{(X,Y)}(x,y)
+\end{align*}
+\end{theorem}
+\begin{corollary}
+\label{4.1.4}
+We have 
+\begin{align*}
+P(X=x)&=P((X,Y)\in \set{x}\times R(Y))\\
+&=\sum_{y \in R(Y)} p_{(X,Y)}(x,y)\\
+&=\sum_{y \in R(Y)} P(X=x,Y=y)
+\end{align*}
+\end{corollary}
+\begin{question}{}{}
+An urn has 2 red, 5 white and 3 green balls. Select 3 balls at random and let 
+\begin{enumerate}[label=(\alph*)]
+  \item $X$ be the number of red balls
+   \item  $Y$ be the number of white balls 
+\end{enumerate}
+We have the following table
+
+\renewcommand{\arraystretch}{1.2} % Slightly increase the padding between rows
+
+\newcolumntype{P}[1]{>{\hspace{2pt}}p{#1}<{\hspace{2pt}}}
+\begin{center}
+   \begin{minipage}{0.9\linewidth}  
+       \centering
+\begin{tabular}{c|P{2cm}P{2cm}P{2cm}|c}
+\hline
+$y \backslash x$ & 0 & 1 & 2 & $P(Y = y)$ \\
+\hline
+0 & $\frac{1}{120}$ & $\frac{2 \cdot 3}{120}$ & $\frac{3}{120}$ & $\frac{10}{120}$ \\
+1 & $\frac{5 \cdot 3}{120}$ & $\frac{2 \cdot 5 \cdot 3}{120}$ & $\frac{5}{120}$ & $\frac{50}{120}$ \\
+2 & $\frac{10 \cdot 3}{120}$ & $\frac{10 \cdot 2}{120}$ & 0 & $\frac{50}{120}$ \\
+3 & $\frac{10}{120}$ & 0 & 0 & $\frac{10}{120}$ \\
+\hline
+$P(X = x)$ & $\frac{56}{120}$ & $\frac{56}{120}$ & $\frac{8}{120}$ & 1\\
+\hline
+\end{tabular}
+   \end{minipage}
+\end{center}
+One should notice that 
+\begin{align*}
+P(X=x,Y=y)&= \frac{\binom{2}{x}\binom{5}{y}\binom{ 3}{3-x-y}}{\binom{10}{3}}\text{    where }\binom{n}{m}=0\text{ if } m<0
+\end{align*}
+With this table, we can compute 
+\begin{align*}
+P(X=2|X\geq Y)=\frac{8}{45}
+\end{align*}
+\end{question}
+\begin{definition}
+\label{4.1.5}
+\textbf{(Definition of Jointly Continuous Random Variable)} Let $X,Y$ be two continuous random variable. There exists  $f:R(X)\times R(Y)\rightarrow \R$ such that 
+\begin{align*}
+P((X,Y)\in S)=\iint_S f(x,y) dxdy
+\end{align*}
+\end{definition}
+\section{Conditional Probability and Expectation}
+\begin{theorem}
+\label{4.2.1}
+\textbf{(Conditional Probability of Discrete Random Variable)} Given two discrete random variable  $X,Y:(\Omega,\mathcal{F},P)\rightarrow \R$, we have 
+\begin{align*}
+P(X=x|Y=y)=\frac{p_{X,Y}(x,y)}{p_{Y}(y)}
+\end{align*}
+\end{theorem}
+\begin{theorem}
+\label{4.2.2}
+\textbf{(Conditional Probability of Continuous Random Variable)} Given two continuous random variable $X,Y:(\Omega,\mathcal{F},P)\rightarrow \R$, we have 
+\begin{align*}
+P(X\in [a,b]|Y=y)=\frac{\int_a^b f_{X,Y}(x,y)dx}{f_{Y}(y)}
+\end{align*}
+\end{theorem}
+\begin{definition}
+\label{4.2.3}
+\textbf{(Conditional Distribution)} Given two discrete random variables, we write 
+\begin{align*}
+p_X(x|Y=y)=P(X=x|Y=y)
+\end{align*}
+and two continuous random variables, we write 
+\begin{align*}
+f_X(x|Y=y)=\frac{f_{X,Y}(x,y)}{f_Y(y)}
+\end{align*}
+\end{definition}
+\begin{definition}
+\label{4.2.4}
+\textbf{(Definition of Conditional Expectation)} Conditional Expectation of $Y$ given  $X=x$ is defined by 
+ \begin{align*}
+E[Y|X=x]&=\sum_{y \in R(Y)}y P(Y=y|X=x)\\
+&=\int_\R y f_{Y}(y|X=x)dy
+\end{align*}
+\end{definition}
+\begin{theorem}
+\textbf{(Tower Property)} We have 
+\begin{align*}
+E[Y]=E[E[Y|X=x]]
+\end{align*}
+\end{theorem}
+\begin{proof}
+This is clear as one can deduce 
+\begin{align*}
+E[E[Y|X=x]]&= \sum_{x\in R(X)} E[Y|X=x] p_X(x)\\
+&=\sum_{x\in R(X)} \sum_{y \in R(Y)} y p_Y(y |X=x)p_X(x)\\
+&=\sum_{y\in R(Y)}y\sum_{x\in R(X)} p_{X,Y}(x,y)\\
+&=\sum_{y \in R(Y)} y p_Y(y)\\
+&=E[Y]
+\end{align*}
+\end{proof}
+\fbox{\begin{minipage}{39em}
+Conjecture: Provided $\forall \omega, P(\set{\omega})\inr$, is it true
+\begin{align*}
+\forall A \in \sigma (E[X|Y]), \sum_{\omega \in A} E[X|Y]P(\set{\omega}) = \sum_{\omega \in A} X P(\set{\omega})
+\end{align*}
+?
+\end{minipage}}
+\section{On Expectation}
+\begin{theorem}
+\label{4.3.1}
+\textbf{(Expectation of Real Valued Function of Random Variable)} Given $g:\R\rightarrow \R$ and $X:\Omega\rightarrow \R$, we have 
+\begin{align*}
+E[g(X)]&=\sum_{x \in R(X)} g(x)p_X(x)\\
+\text{ or if continuous }&=\int_\R g(x)f_X(x)dx
+\end{align*}
+\end{theorem}
+\begin{corollary}
+\label{4.3.2}
+\textbf{(Expectation of Linear Change of Random Variable)} Given $X:\Omega\rightarrow \R$, we have 
+\begin{align*}
+E[aX+b]=aE[X]+b
+\end{align*}
+\end{corollary}
 
 
+\begin{theorem}
+\label{4.3.3}
+\textbf{(Expectation of Addition of Random Variables)} Given random variables $X_1,\dots, X_n$
+\begin{align*}
+E[\sum_{k=1}^n X_k]=\sum_{k=1}^n E[X_k]
+\end{align*}
+\end{theorem}
+\begin{theorem}
+\label{4.3.4}
+\textbf{(Expectation of Real Valued Function of Multiple Random Variables)} Given $g:\R^2\rightarrow \R$ and $X,Y:\Omega \rightarrow \R$, we have 
+\begin{align*}
+E[g(X,Y)]&=\sum_{(x,y)\in R(X)\times R(Y)} g(x,y)p_{X,Y}(x,y)\\
+\text{ or if continuous }&=\iint_{\R^2} g(x,y)f_{X,Y}(x,y)dxdy
+\end{align*}
+\end{theorem}
+\begin{corollary}
+\label{4.3.5}
+\textbf{(Expectation of Product of Independent Random Variables)} Given $X,Y:\Omega \rightarrow \R$, we have 
+\begin{align*}
+E[g(X)h(Y)]=E[g(X)]\times E[h(Y)]
+\end{align*}
+\end{corollary}
+\begin{proof}
+If $X,Y$ are discrete 
+ \begin{align*}
+E[g(X)h(Y)]&=\sum_{(x,y)\in R(X)\times R(Y)} g(x)h(y)p_{X,Y}(x,y)\\
+&=\sum_{(x,y)\in R(X)\times R(Y)}g(x)p_X(x)h(y)p_Y(y)\\
+&=\sum_{x\in R(X)}\sum_{y \in R(Y)}g(x)p_X(x)h(y)p_Y(y)\\
+&=\sum_{x\in R(X)}g(x)p_X(x) \sum_{y \in R(Y)}h(y)p_Y(y)\\
+&=E[g(X)]\times E[h(Y)]
+\end{align*}
+If $X,Y$ are continuous 
+ \begin{align*}
+E[g(X)h(Y)]&= \iint_{\R^2} g(x)h(y)f_{X,Y}(x,y)dxdy\\
+&=\iint_{\R^2}g(x)h(y)f_X(x)f_Y(y)dxdy\\
+&=\int_\R g(x)f_X(x)dx\int_\R h(y)f_Y(y)dy\\
+&=E[g(X)]\times E[h(Y)]
+\end{align*}
+\end{proof}
+\begin{question}{}{}
+Let $(X,Y)$ be a random point in the triangle $\set{(x,y):x,y\geq 0,x+y\leq 1}$. Show that $X,Y$ are not independent and  
+\begin{align*}
+E[XY]\neq E[X]\times E[Y]
+\end{align*}
+\end{question}
+\begin{proof}
+Notice the area of the triangle is $\frac{1}{2}$, so we have 
+\begin{align*}
+f_{X,Y}(x,y)=\begin{cases}
+  2& \text{ if $(x,y)$ in the triangle }\\
+  0& \text{ if else where }
+\end{cases}
+\end{align*}
+Compute the marginal probability 
+\begin{align*}
+f_X(x)&=\int_0^{1-x} f_{X,Y}(x,y)dy\\
+&=\int_0^{1-x} 2dy=2-2x
+\end{align*}
+Notice the symmetry so we have 
+\begin{align*}
+f_Y(y)=2-2y
+\end{align*}
+Then it is quite clear that $X,Y$ are not independent, as we can observe  $f_{X,Y}(0,0)=2\neq 4=f_X(0)f_Y(0)$
+\end{proof}
+Compute 
+\begin{align*}
+E[X]&=\int_0^1 x f_X(x)dx\\
+&=\int_0^1 2x-2x^2 dx\\
+&=x^2-\frac{2x^3}{3}\at_{x=0}^1\\
+&=1-\frac{2}{3}=\frac{1}{3}
+\end{align*}
+and compute 
+\begin{align*}
+E[XY]&=\int_0^1\int_0^{1-x} xy f_{X,Y}(x,y)dydx\\
+&=2\int_0^1\int_0^{1-x}xydydx\\
+&=2\int_0^1 \frac{xy^2}{2}\at_{y=0}^{1-x}dx\\
+&=\int_0^1 x(1-x)^2 dx\\
+&=\int_0^1 x^3-2x^2+xdx\\
+&=\frac{x^4}{4}-\frac{2x^3}{3}+\frac{x^2}{2}\at_{x=0}^1\\
+&=\frac{1}{4}-\frac{2}{3}+\frac{1}{2}=\frac{1}{12}\neq \frac{1}{9}=E[X]\times E[Y]
+\end{align*}
+\begin{question}{}{}
+Let $(X,Y)$ be a random point in the diamond $\set{(x,y):
+\abso{x}\leq 1\text{ and }\abso{y}\leq 1}$. Show that $X,Y$ are not independent, yet 
+ \begin{align*}
+E[XY]=E[X]\times E[Y]
+\end{align*}
+\end{question}
+\begin{proof}
+The area is $2$. Then the density function is 
+ \begin{align*}
+f_{X,Y}(x,y)=\begin{cases}
+  \frac{1}{2}& \text{ if $(x,y)$ in the diamond }\\
+  0& \text{ if not }
+\end{cases}
+\end{align*}
+Compute the marginal density 
+\begin{align*}
+f_X(x)&=\int_{-\abso{1-x}}^{\abso{1-x}} f_{X,Y}(x,y)dy\\
+&=\abso{1-x}
+\end{align*}
+We see $X,Y$ are not independent as 
+\begin{align*}
+f_{X,Y}(0,0)=\frac{1}{2}\neq 1=f_X(0)\times f_Y(0)
+\end{align*}
+Compute 
+\begin{align*}
+E[XY]&=\int_0^1 \int_{-\abso{1-x}}^{\abso{1-x}}\frac{xy}{2}dydx\\
+&=\int_0^1 \frac{xy^2}{4}\at_{y=-\abso{1-x}}^{\abso{1-x}}dx=0
+\end{align*}
+and also  
+\begin{align*}
+E[Y]=E[X]=\int_{-1}^1 x\abso{1-x}dx=0(\because \text{ odd function })
+\end{align*}
+\end{proof}
+\begin{question}{}{}
+Assumethat an urn contains 10 black, 7 red, and 5 white balls. Select 5 balls 
+\begin{enumerate}[label=(\alph*)]
+  \item with and 
+  \item without replacement
+\end{enumerate}
+and let $X$ be the number of red balls selected. Compute $E[X]$
+\end{question}
+\begin{proof}
+Let $X=\sum_{i=1}^5 X_i$ where 
+\begin{align*}
+p_{X_i}(1)=\frac{7}{22}\text{ and }p_{X_i}(0)=\frac{15}{22}
+\end{align*}
+We have 
+\begin{align*}
+E[X]&=E[\sum_{i=1}^5 X_i]\\
+&=\sum_{i=1}^5 E[X_i]\\
+&=\sum_{i=1}^5 \frac{7}{22}=\frac{35}{22}
+\end{align*}
+For $(b)$, we again have  $E[X_i]=\frac{7}{22}$. The fact they are dependent doesn't matter, we still have
+\begin{align*}
+E[X]=\sum_{i=1}^5 E[X_i]=\frac{35}{22}
+\end{align*}
+\end{proof}
+\begin{question}{}{}
+$n$ people bought $n$ gifts. The gifts then are distributed to the $n$ people at random. Let $X$ be the number of people who receive their own gift. Compute  $E[X]$
+\end{question}
+\begin{proof}
+The question is ambiguous, but the ambiguity doesn't make our question have multiple answer. The question doesn't specified that whether every one get one gift or if one can get multiple. Yet, if we let 
+\begin{align*}
+I_i=I_{\text{person $i$ receive own gift}}
+\end{align*}
+Former situation leads to the dependence of variables while the latter leads to the independence. However, dependent or not, because 
+\begin{align*}
+X=\sum_{i=1}^{n}I_i
+\end{align*}
+we have 
+\begin{align*}
+E[X]=\sum_{i=1}^{n}E[I_i]=n (\frac{1}{n})=1
+\end{align*}
+\end{proof}
+\begin{question}{}{}
+Five married couples are seated around a table at random. Let $X$ be the number of wives who sit next to their husbands. What is  $E[X]$? 
+\end{question}
+\begin{proof}
+Let 
+\begin{align*}
+X=\sum_{i=1}^5 I_i
+\end{align*}
+We have $E[I_i]=\frac{2}{9}$, then 
+\begin{align*}
+  E[X]=\sum_{i=1}^5 E[I_i]=\frac{10}{9}
+\end{align*}
+\end{proof}
+\begin{question}{}{}
+Sample from $n$ cards, with replacement, indefinitely. Let $N$ be the number of draws you need to get a collection of all $n$ cards. Compute $E[N]$
+\end{question}
+\begin{proof}
+Let $\Omega$ be the set of sequences of the card drawn. Let $N_1(\omega)$ be the number of card you need to draw to get the first new card if $\omega$ is given. Let $N_2(\omega)$ be the number of additional cards you need to draw after the first new card to get the second new card. Random Variables $N_{i}(\omega)$ is defined similarly. Then we see 
+\begin{align*}
+N=\sum_{i=1}^n N_i
+\end{align*}
+It is quite clear that 
+\begin{align*}
+N_i \sim \text{Geo}(\frac{n-i+1}{n})
+\end{align*}
+Then we have 
+\begin{align*}
+E[N]=\sum_{i=1}^n E[N_i]=\sum_{i=1}^n \frac{n}{n-i+1}=n\sum_{i=1}^n \frac{1}{i} 
+\end{align*}
+\end{proof}
+\begin{question}{}{}
+Assume that an urn contain $10$ black,  $7$ red, and  $5$ white balls. Select  $5$ balls 
+ \begin{enumerate}[label=(\alph*)]
+  \item with replacement 
+  \item without replacement
+\end{enumerate}
+Let $W$ be the number of whit balls selected, and $Y$ the number of different colors. Compute  $E[W],E[Y]$
+\end{question}
+\begin{proof}
+In both $(a),(b)$, 
+\begin{align*}
+E[W]=\sum_{i=1}^5 E[I_i]=\frac{25}{22}
+\end{align*}
+Let 
+\begin{align*}
+Y=I_B+I_R+I_W
+\end{align*}
+where $I_B$ is the indicator that if black ball is selected in the 5 balls.\\
+
+
+In $(a)$, we have 
+\begin{align*}
+E[I_B]&=P(I_B=1)=1-(\frac{12}{22})^5\\
+E[I_R]&=1-(\frac{15}{22})^5\\
+E[I_W]&=1-(\frac{17}{22})^5
+\end{align*}
+Then 
+\begin{align*}
+E[Y]=3-\frac{12^5+15^5+17^5}{22^5}
+\end{align*}
+In $(b)$, we have 
+\begin{align*}
+E[I_B]&=1-\frac{\binom{12}{5}}{\binom{22}{5}}\\
+E[I_R]&=1-\frac{\binom{15}{5}}{\binom{22}{5}}\\
+E[I_W]&=1-\frac{\binom{17}{5}}{\binom{22}{5}}
+\end{align*}
+Then 
+\begin{align*}
+E[Y]=3-\frac{\binom{12}{5}+\binom{15}{5}+\binom{17}{5}}{\binom{22}{5}}
+\end{align*}
+\end{proof}
+\section{Covariance}
+\begin{definition}
+\label{4.4.1}
+\textbf{(Definition of Covariance)} The covariance of two random variable $X,Y$ is defined by 
+\begin{align*}
+\text{Cov}[X,Y]=E[(X-E[X])(Y-E[Y])]
+\end{align*}
+\end{definition}
+\begin{theorem}
+\label{4.4.2}
+\textbf{(Formula for Covariance)} We have 
+\begin{align*}
+\text{Cov}[X,Y]=E[XY]-E[X]\times E[Y]
+\end{align*}
+\end{theorem}
+\begin{proof}
+\myref{Theorem}{4.3.3} let us deduce
+\begin{align*}
+\text{Cov}[X,Y]&=E[(X-E[X])(Y-E[Y])]\\
+&=E[XY-Y\times E[X]-X \times E[Y]+E[X]\times E[Y]]\\
+&=E[XY]-E[X]\times E[Y]-E[Y]\times E[X]+E[X]\times E[Y]\\
+&=E[XY]-E[X]\times E[Y]
+\end{align*}
+\end{proof}
+\begin{theorem}
+\label{4.4.3}
+\textbf{(Independent Implies Zero Covariance)}
+\begin{align*}
+X,Y\text{ are independent }\implies \text{Cov}[X,Y]=0
+\end{align*}
+\end{theorem}
+\begin{proof}
+See \myref{Theorem}{4.3.4}
+\end{proof}
+\fbox{\begin{minipage}{39em}
+An example for $X,Y$ be dependent, yet $\text{Cov}[X,Y]=0$ is question 10 in last section.
+\end{minipage}}
+\section{Variance of Sum of Random Variables}
+\fbox{\begin{minipage}{39em}
+At now, one should notice that expectation of sum of random variables is just the sum of expectations of random variables with or without independence.\\
+
+Also, the expectation of product of independent random variables is the product of expectation of independent variables. Notice that this won't necessarily hold true if variables are independent. 
+\end{minipage}}
+\begin{theorem}
+\label{4.5.1}
+\textbf{(Variance-Covariance Formula)} We have
+\begin{align*}
+  E[(\sum_{i=1}^n X_i)^2]&=\sum_{i=1}^n E[X_i^2]+\sum_{i\neq j} E[X_iX_j]\\
+  \var[\sum_{i=1}^n X_i]&=\sum_{i=1}^n \var [X_i]+\sum_{i\neq j} \text{Cov}[X_i,X_j]
+\end{align*}
+\end{theorem}
+\begin{proof}
+Notice 
+\begin{align*}
+  (\sum_{i=1}^n X_i)^2 = \sum_{i=1}^n X_i^2 + \sum_{i\neq j} X_iX_j
+\end{align*}
+Then the proof follows from the fact expectation is a homomorphism from set of random variables on $(\Omega,\mathcal{F},P)$ to $(\R,+)$.\\
+
+Compute 
+\begin{align*}
+  \var [\sum_{i=1}^n X_i]&= E[(\sum_{i=1}^m X_i)^2]-(E[\sum_{i=1}^n X_i])^2\\
+  &=\sum_{i=1}^n E[X_i^2]+\sum_{i\neq j}E[X_iX_j]-(\sum_{i=1}^n E[X_i])^2\\
+  &=\sum_{i=1}^n E[X_i^2]+\sum_{i\neq j}E[X_iX_j]-(\sum_{i=1}^n E^2[X_i] + \sum_{i\neq j}E[X_i]E[X_j])\\
+  &=\sum_{i=1}^n E[X_i^2]-E^2[X_i]+\sum_{i\neq j}E[X_iX_j]-E[X_i]E[X_j]\\
+  &=\sum_{i=1}^n \var [X_i]+\sum_{i \neq j} \text{Cov}[X_i,X_j]
+\end{align*}
+\end{proof}
+\begin{corollary}
+\label{4.5.2}
+\textbf{(Variance of Sum of Mutually Independent Random Variables Is the Sum of Variances of Mutually Independent Random Variables)} If $X_1,\dots ,X_n$ are mutually independent, then 
+\begin{align*}
+  \var [\sum_{i=1}^n X_i]=\sum_{i=1}^n \var [X_i]
+\end{align*}
+\end{corollary}
+\begin{proof}
+Because $X_1,\dots ,X_n$ are mutually independent, we can deduce 
+\begin{align*}
+\var [\sum_{i=1}^n X_i]&=\sum_{i=1}^n \var [X_i]+\sum_{i\neq j}\text{Cov}[X_i,X_j]\\
+&=\sum_{i=1}^n \var [X_i]
+\end{align*}
+\end{proof}
 \end{document}
